[misc] Fixed spacing in disclamer after removing last updated time

--- a/matching-notification-resources/src/main/resources/resources/uicomponents/matchingNotification/matchesTable.css
+++ b/matching-notification-resources/src/main/resources/resources/uicomponents/matchingNotification/matchesTable.css
@@ -547,7 +547,6 @@ td[name="contact"] {
 }
 .mme-disclaimer .title {
   font-style: italic;
-  padding-top: 1em;
   padding-bottom: 0.2em;
   opacity: 0.6;
 }
